# co

./: Cargo.toml  README.md
benches/: cmp.rs
src/: decode.rs  encode.rs  encode_safe.rs  lib.rs  reader.rs  writer.rs
tests/: cmp.rs  encode.rs
