[package]
name = "co"
version = "0.1.0-alpha2"
edition = "2021"
description = "Efficient byte packet encoding/decoding"
documentation = "https://docs.rs/areq"
license = "Apache-2.0 OR MIT"
authors = ["nanoqsh"]
keywords = ["encoding", "decoding", "no-std"]
categories = ["encoding", "no-std", "no-std::no-alloc"]
readme = "README.md"
repository = "https://github.com/nanoqsh/co"
rust-version = "1.83"

[lints.clippy]
manual-assert = "deny"
missing-assert-message = "deny"
missing_inline_in_public_items = "deny"
multiple-unsafe-ops-per-block = "deny"
semicolon-if-nothing-returned = "deny"
trivially-copy-pass-by-ref = "deny"
use-self = "deny"
undocumented-unsafe-blocks = "deny"
unwrap-used = "deny"
