[package]
name = "co"
version = "0.1.0"
edition = "2021"
description = "Efficient byte packet encoding/decoding"
documentation = "https://docs.rs/areq"
license = "Apache-2.0 OR MIT"
authors = ["nanoqsh"]
keywords = ["encoding", "decoding", "no-std"]
categories = ["encoding", "no-std", "no-std::no-alloc"]
readme = "README.md"
repository = "https://github.com/nanoqsh/co"
rust-version = "1.83"

[dev-dependencies]
divan = "0.1"

[[bench]]
name = "cmp"
harness = false

[lints.clippy]
manual-assert = "deny"
missing-assert-message = "deny"
missing-inline-in-public-items = "deny"
multiple-unsafe-ops-per-block = "deny"
semicolon-if-nothing-returned = "deny"
trivially-copy-pass-by-ref = "deny"
use-self = "deny"
undocumented-unsafe-blocks = "deny"
unwrap-used = "deny"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
